@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-08-15T01:57:33Z",
+  "timestamp" : "2022-08-15T08:23:21Z",
   "count_outdated" : 2336,
   "uniques_outdated" : 537,
-  "count" : 2367,
+  "count" : 2366,
   "uniques" : 557,
   "clones" : [
     {
       "timestamp": "2022-08-01T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
