@@ -1,10 +1,10 @@
 {
-  "count": 31,
+  "count": 30,
   "uniques": 11,
   "clones": [
     {
       "timestamp": "2022-08-01T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
